Change link to form-validation.js

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,7 @@
     <ul>
         <li><a href="https://github.com/Buddenbrock/typo3-icons" target="_blank">TYPO3 Icons</a></li>
         <li><a href="https://buddenbrock.github.io/contrast-switch.js/#content" target="_blank">contrast-switch.js</a></li>
-        <li><a href="https://github.com/Buddenbrock/form-validation.js" target="_blank">form-validation.js</a></li>
+        <li><a href="https://buddenbrock.github.io/form-validation.js/" target="_blank">form-validation.js</a></li>
     </ul>
 </nav>
 <header class="page-header" role="banner">
