Change link to contrast-switch.js

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
 <nav class="meta-nav">
     <ul>
         <li><a href="https://github.com/Buddenbrock/typo3-icons" target="_blank">TYPO3 Icons</a></li>
-        <li><a href="https://buddenbrock.github.io/contrast-switch.js/#content" target="_blank">contrast-switch.js</a></li>
+        <li><a href="https://buddenbrock.github.io/contrast-switch.js/" target="_blank">contrast-switch.js</a></li>
         <li><a href="https://buddenbrock.github.io/form-validation.js/" target="_blank">form-validation.js</a></li>
     </ul>
 </nav>
